[gd_scene load_steps=5 format=3 uid="uid://build_menu_ui"]

[ext_resource type="Script" path="res://building/build_menu_ui.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.05, 0.1, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.1, 0.8, 1, 0.3)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(0.1, 0.2, 0.3, 0.5)
corner_radius_top_left = 18
corner_radius_top_right = 18

[node name="BuildMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="VBox" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Header" type="Panel" parent="Background/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="CategoryTabs" type="TabBar" parent="Background/VBox/Header"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tab_count = 5
tab_alignment = 1
tab_0/title = "Structures"
tab_1/title = "Facilities"
tab_2/title = "Furniture"
tab_3/title = "Utility"
tab_4/title = "Blueprints"

[node name="SubHeader" type="Control" parent="Background/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="SubCategoryTabs" type="TabBar" parent="Background/VBox/SubHeader"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
tab_count = 5
tab_alignment = 1
tab_0/title = "Foundation"
tab_1/title = "Walls"
tab_2/title = "Floor/Roof"
tab_3/title = "Stairs"
tab_4/title = "Doors/Windows"

[node name="Content" type="ScrollContainer" parent="Background/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Margin" type="MarginContainer" parent="Background/VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="Background/VBox/Content/Margin"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 8

[node name="Footer" type="Control" parent="Background/VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="SearchBar" type="LineEdit" parent="Background/VBox/Footer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Search structures..."
alignment = 1
